--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,52 @@
-node_modules
+# Node.js
+/node_modules
+/apps/*/node_modules
+/dist
+/build
+/.turbo
+/.vscode
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.pnpm-debug.log
+.pnp
+.pnp.js
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Vite
+.vite
+*.temp
+
+# TypeScript
+*.tsbuildinfo
+
+# IDEs and editors
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# macOS
+.DS_Store
+
+# Miscellaneous
+*.log
+.cache/
+tmp/
