--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev:server": "pnpm --filter server start-ts"
   },
   "workspaces": [
-    "client",
-    "server"
+    "apps/client",
+    "apps/server"
   ],
   "keywords": [],
   "author": "",
