--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -16,11 +16,12 @@
     "fastify": "^5.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.11.1",
+    "@eslint/js": "^9.12.0",
     "@types/node": "^22.7.5",
     "drizzle-kit": "^0.26.2",
     "eslint": "^9.12.0",
-    "globals": "^15.9.0",
+    "eslint-plugin-node": "^11.1.0",
+    "globals": "^15.11.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.9.0"
